
5.2a3 -> 5.2a4:
    - jbj: yarn: glibc pthreads (at least) returns errno's, strrerror decodes.
    - jbj: yarn: fix: assert fail instead of exit on error.
    - jbj: yarn: use the pool allocator.
    - jbj: yarn: add a pool allocator.
    - devzero2000: add mkdtemp portability function to -lrpmmisc 
    - proyvind: do lazy mkdir of %_builddir, %_rpmdir & %_srcrpmdir when doing
	--install for src.rpms as well.
    - jbj: yarn: convert Header refcount to usage mutex.
    - jbj: zlog: rework trace log with a refcount mutex instead.
    - proyvind: do lazy mkdir of %_topdir, %_builddir, %_rpmdir & %_srcrpmdir
	when doing '--rebuild' so that it should mostly work easily for user.
    - proyvind: make it possible to set preferred build architectures when using
	libcpuinfo with ie. '%_prefer_buildarchs x86_64:i686:i586'.
    - proyvind: get the list of compatible archs printed with '--showrc' from
	mire platform patterns.
    - proyvind: use cpuinfo() probe for detecting platform rather than
	libcpuinfo directly.
    - jbj: delete ancient header+payload RSA signatures too using GPG (#488953).
    - jbj: rpmio: install rpmzlog.h and yarn.h, carry with rpmio.h.
    - jbj: rpmio: don't include glob.h.
    - devzero2000: fix --orphandirs port alias ; add --danglinglink popt alias
    - proyvind: add support for cpuinfo() probe through libcpuinfo.
    - proyvind: perl: make sure to link against all required libraries to fix
	build with --no-undefined.
    - proyvind: only provide PayLoadIsLzma and PayLoadIsXz features when enabled.
    - proyvind: xzdio: kill backwards compatibility with ancient lzma utils.
    - proyvind: fix order of archs added throuh libcpuinfo so that
	rpmPlatformScore() will return correct value.

5.2a2 -> 5.2a3:
    - rse: use Pthreads under --with-pthreads controlled WITH_PTHREADS and not <pthreads.h> existance-derived HAVE_PTHREADS_H 
    - jbj: update po files (Translation Project).
    - jbj: yarn: lobotomize yarn.c conditioned on HAVE_PTHREAD_H.